# bozo-sort

./: CMakeLists.txt  layout_print.txt  no-sm-hits-verify-disabled.ncu-rep  wmma-no-sm-hits.ncu-rep
src/kernels/: bogo_sort_matv1.cu  bogo_sort_matv1.cuh  bogo_sort_matv2.cu  bogo_sort_matv2.cuh
tests/: kernel_tests.cu
